crates/rsub-api/tests/snapshots/snapshots__album_json.snap
---
source: crates/rsub-api/tests/snapshots.rs
expression: json
---
{
  "subsonic-response": {
    "album": {
      "artist": "The Beatles",
      "artistId": "ar12",
      "artists": [
        {
          "id": "ar12",
          "name": "The Beatles"
        }
      ],
      "coverArt": "al34-0badf00d",
      "created": "2020-09-13T12:26:40.000Z",
      "displayArtist": "The Beatles",
      "duration": 259,
      "genre": "Rock",
      "genres": [
        {
          "name": "Rock"
        },
        {
          "name": "Pop"
        }
      ],
      "id": "al34",
      "isCompilation": false,
      "moods": [],
      "name": "Abbey Road",
      "recordLabels": [
        {
          "name": "Apple"
        }
      ],
      "releaseDate": {
        "day": 26,
        "month": 9,
        "year": 1969
      },
      "releaseTypes": [
        "album"
      ],
      "song": [
        {
          "album": "Abbey Road",
          "albumArtists": [
            {
              "id": "ar12",
              "name": "The Beatles"
            }
          ],
          "albumId": "al34",
          "artist": "The Beatles",
          "artistId": "ar12",
          "artists": [
            {
              "id": "ar12",
              "name": "The Beatles"
            }
          ],
          "bitDepth": 24,
          "bitRate": 1015,
          "channelCount": 2,
          "contentType": "audio/flac",
          "contributors": [],
          "coverArt": "al34-0badf00d",
          "created": "2020-09-13T12:26:40.000Z",
          "discNumber": 1,
          "displayAlbumArtist": "The Beatles",
          "displayArtist": "The Beatles",
          "duration": 259,
          "genre": "Rock",
          "genres": [
            {
              "name": "Rock"
            }
          ],
          "id": "tr56",
          "isDir": false,
          "isVideo": false,
          "mediaType": "song",
          "moods": [
            "Groovy"
          ],
          "parent": "al34",
          "path": "The Beatles/Abbey Road/01 - Come Together.flac",
          "replayGain": {
            "albumGain": -8.9,
            "trackGain": -9.36
          },
          "samplingRate": 96000,
          "size": 32985721,
          "sortName": "come together",
          "suffix": "flac",
          "title": "Come Together",
          "track": 1,
          "type": "music",
          "year": 1969
        }
      ],
      "songCount": 1,
      "sortName": "abbey road",
      "year": 1969
    },
    "openSubsonic": true,
    "serverVersion": "[version]",
    "status": "ok",
    "type": "rs-subsonic",
    "version": "1.16.1"
  }
}
