crates/rsub-api/tests/snapshots/snapshots__album_xml.snap
---
source: crates/rsub-api/tests/snapshots.rs
expression: xml
---
<?xml version="1.0" encoding="UTF-8"?>
<subsonic-response xmlns="http://subsonic.org/restapi" status="ok" version="1.16.1" type="rs-subsonic" serverVersion="[version]" openSubsonic="true"><album id="al34" name="Abbey Road" artist="The Beatles" artistId="ar12" coverArt="al34-0badf00d" songCount="1" duration="259" created="2020-09-13T12:26:40.000Z" year="1969" genre="Rock" displayArtist="The Beatles" sortName="abbey road" isCompilation="false"><recordLabels name="Apple"/><genres name="Rock"/><genres name="Pop"/><artists id="ar12" name="The Beatles"/><releaseTypes>album</releaseTypes><releaseDate year="1969" month="9" day="26"/><song id="tr56" parent="al34" isDir="false" title="Come Together" album="Abbey Road" artist="The Beatles" track="1" year="1969" genre="Rock" coverArt="al34-0badf00d" size="32985721" contentType="audio/flac" suffix="flac" duration="259" bitRate="1015" path="The Beatles/Abbey Road/01 - Come Together.flac" isVideo="false" discNumber="1" created="2020-09-13T12:26:40.000Z" albumId="al34" artistId="ar12" type="music" mediaType="song" sortName="come together" displayArtist="The Beatles" displayAlbumArtist="The Beatles" bitDepth="24" samplingRate="96000" channelCount="2"><genres name="Rock"/><artists id="ar12" name="The Beatles"/><albumArtists id="ar12" name="The Beatles"/><moods>Groovy</moods><replayGain trackGain="-9.36" albumGain="-8.9"/></song></album></subsonic-response>
