crates/rsub-api/tests/snapshots/snapshots__error_json.snap
---
source: crates/rsub-api/tests/snapshots.rs
expression: json
---
{
  "subsonic-response": {
    "error": {
      "code": 40,
      "message": "Wrong username or password."
    },
    "openSubsonic": true,
    "serverVersion": "[version]",
    "status": "failed",
    "type": "rs-subsonic",
    "version": "1.16.1"
  }
}
