crates/rsub-api/tests/snapshots/snapshots__error_xml.snap
---
source: crates/rsub-api/tests/snapshots.rs
expression: xml
---
<?xml version="1.0" encoding="UTF-8"?>
<subsonic-response xmlns="http://subsonic.org/restapi" status="failed" version="1.16.1" type="rs-subsonic" serverVersion="[version]" openSubsonic="true"><error code="40" message="Wrong username or password."/></subsonic-response>
