crates/rsub-api/tests/snapshots/snapshots__genres_xml.snap
---
source: crates/rsub-api/tests/snapshots.rs
expression: xml
---
<?xml version="1.0" encoding="UTF-8"?>
<subsonic-response xmlns="http://subsonic.org/restapi" status="ok" version="1.16.1" type="rs-subsonic" serverVersion="[version]" openSubsonic="true"><genres><genre songCount="3" albumCount="2">Rock &amp; Roll</genre><genre songCount="1" albumCount="1">Pop</genre></genres></subsonic-response>
