crates/rsub-api/tests/snapshots/snapshots__indexes_json.snap
---
source: crates/rsub-api/tests/snapshots.rs
expression: json
---
{
  "subsonic-response": {
    "indexes": {
      "ignoredArticles": "The El La",
      "index": [
        {
          "artist": [
            {
              "albumCount": 2,
              "coverArt": "ar12-00c0ffee",
              "id": "ar12",
              "name": "The Beatles"
            }
          ],
          "name": "B"
        }
      ],
      "lastModified": 1700000000000
    },
    "openSubsonic": true,
    "serverVersion": "[version]",
    "status": "ok",
    "type": "rs-subsonic",
    "version": "1.16.1"
  }
}
